[tool.poetry]
name = "isudo.ru"
version = "0.1.0"
description = "Personal blog"
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
jinja2 = "^2.10"
markdown = "^3.1"
pygments = "^2.5"
pyyaml = "^5.2"
baker = "^1.3"
pytz = "^2019.3"
awscli = "^1.16"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
