[tool.poetry]
name = "isudo.ru"
version = "0.1.0"
description = "Personal blog"
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22"
jinja2 = "^3.0"
markdown = "^3.1"
pygments = "^2.5"
pyyaml = "^5.4"
baker = "^1.3"
pytz = "^2021"
awscli = "^1.16"


[tool.poetry.dev-dependencies]
pytest = "^7.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
