[tool.poetry]
name = "isudo.ru"
version = "0.1.0"
description = "Personal blog"
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.0"
jinja2 = "^3.0"
markdown = "^3.0"
pygments = "^2.0"
pyyaml = "^6.0"
pytz = ">=2025"
awscli = "^1.0"
fire = "^0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
